--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "ioredis": "^5.7.0",
     "p-queue": "^8.1.1",
+    "pg": "^8.16.3",
     "pino": "^9.9.4",
     "pino-pretty": "^13.1.1",
     "ws": "^8.18.3",
@@ -32,8 +34,10 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
+    "@types/pg": "^8.15.6",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
